RESOLVED FIXED72453
DRT's uiElementAttributeValueCallback function is leaky
https://bugs.webkit.org/show_bug.cgi?id=72453
Summary DRT's uiElementAttributeValueCallback function is leaky
Adam Roben (:aroben)
Reported 2011-11-15 19:35:09 PST
Check it out: http://trac.webkit.org/browser/trunk/Tools/DumpRenderTree/AccessibilityUIElement.cpp?rev=99741#L377 We're leaking the attribute string. The Leaks bot concurs.
Attachments
Patch (1.85 KB, patch)
2011-11-15 22:43 PST, Darin Adler
mitz: review+
Darin Adler
Comment 1 2011-11-15 22:43:06 PST
Darin Adler
Comment 2 2011-11-15 22:46:54 PST
Note You need to log in before you can comment on or make changes to this bug.