DRT's uiElementAttributeValueCallback function is leaky https://bugs.webkit.org/show_bug.cgi?id=72453

Reviewed by Dan Bernstein.

* DumpRenderTree/AccessibilityUIElement.cpp:
(uiElementAttributeValueCallback): Use JSRetainPtr and don't leak.


Canonical link: https://commits.webkit.org/88940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100409 268f45cc-cd09-0410-ab3c-d52691b4dbfc